# GABLOG

./: CMakeLists.txt  README.md  gabdebug.c  gabdebug.h
src/: gabdebug.h  gablog.cpp  gablog.h  main.cpp
